--- a/StockTradingClient/Customer.fxml
+++ b/StockTradingClient/Customer.fxml
@@ -8,16 +8,38 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="StockTradingClient.CustomerController">
+<AnchorPane id="AnchorPane" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="StockTradingClient.CustomerController">
   <children>
-    <Label layoutX="11.0" prefHeight="-1.0" prefWidth="-1.0" text="Customer Details" textAlignment="CENTER" textFill="#292929" AnchorPane.topAnchor="7.0">
-      <font>
-        <Font name="Candara Bold" size="16.0" />
-      </font>
-    </Label>      
-    <GridPane id="GridPane" alignment="TOP_LEFT" prefWidth="596.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="14.0">
-      <children>
-        <TextField fx:id="CustomerName" prefWidth="375.0" promptText="Name of the Customer" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+    <SplitPane dividerPositions="0.2794279427942794" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="47.0">
+      <items>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <VBox prefHeight="413.999755859375" prefWidth="-1.0" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <children>
+                <Label prefHeight="30.0" prefWidth="245" text="Customers in my firm:" />
+                <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                  <content>
+                    <AnchorPane id="Content" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0">
+                      <children>
+                        <ListView fx:id="CustomerListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#ShowDetails" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                      </children>
+                    </AnchorPane>
+                  </content>
+                </ScrollPane>
+              </children>
+            </VBox>
+          </children>
+        </AnchorPane>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <GridPane id="GridPane" alignment="TOP_LEFT" prefWidth="596.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="14.0">
+        <children>
+        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                  <children>
+                    <TextField fx:id="CustomerFirstName" prefWidth="162.0" promptText="First Name" />
+                    <TextField fx:id="CustomerLastName" prefWidth="247.0" promptText="Last Name" />
+                  </children>
+        </HBox>
         <TextField fx:id="CustomerSSN" alignment="CENTER_LEFT" prefWidth="375.0" promptText="SSN Number of the Customer" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <TextField fx:id="AddressStreet" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
         <TextField fx:id="AddressCity" maxWidth="-Infinity" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
@@ -42,8 +64,9 @@
         <Label text="Phone (Other) :" GridPane.columnIndex="0" GridPane.rowIndex="10" />
         <HBox id="HBox" alignment="CENTER_RIGHT" maxWidth="+Infinity" prefWidth="-1.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="14">
           <children>
-            <Button alignment="CENTER" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" prefWidth="80.0" rotate="0.0" text="Add" />
-            <Button cancelButton="true" contentDisplay="LEFT" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleClearButtonAction" prefWidth="80.0" text="Clear" />
+            <Button fx:id="btnSave" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleSaveButtonAction" prefWidth="80.0" text="Save" />
+            <Button fx:id="btnAdd" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleAddButtonAction" prefWidth="80.0" text="Add" />
+            <Button fx:id="btnClear" cancelButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleClearButtonAction" prefWidth="80.0" text="Clear" />
           </children>
         </HBox>
         <ChoiceBox fx:id="StatusChoiceBox" mouseTransparent="false" pickOnBounds="false" prefWidth="146.49990844726562" GridPane.columnIndex="1" GridPane.rowIndex="12">
@@ -76,6 +99,15 @@
         <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
-    <Label fx:id="Message" alignment="CENTER" prefHeight="33.0" prefWidth="601.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="14.0" />
+          </children>
+        </AnchorPane>
+      </items>
+    </SplitPane>
+    <Label alignment="CENTER_LEFT" contentDisplay="LEFT" text="Customer Details" textAlignment="CENTER" textFill="#292929" textOverrun="ELLIPSIS" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="6.0">
+      <font>
+        <Font name="Candara Bold" size="16.0" />
+      </font>
+    </Label>
+    <Label fx:id="Message" alignment="CENTER" prefHeight="33.0" prefWidth="636.99995585937" text="" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="253.0" AnchorPane.rightAnchor="8.0" />
   </children>
 </AnchorPane>
