--- a/StockTradingClient/BrokerFirm.fxml
+++ b/StockTradingClient/BrokerFirm.fxml
@@ -36,29 +36,33 @@
               <children>
                 <TextField fx:id="BrokerageFirmName" prefWidth="375.0" promptText="Name of the Brokerage Firm" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                 <TextField fx:id="BrokerageFirmLicenseNumber" alignment="CENTER_LEFT" prefWidth="375.0" promptText="License Number of the Brokerage Firm" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <TextField fx:id="AddressStreet" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                <TextField id="City" fx:id="AddressCity" maxWidth="-Infinity" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                <TextField fx:id="AddressState" alignment="TOP_LEFT" maxWidth="-Infinity" minWidth="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="5" />
-                <TextField fx:id="AddressZip" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="75.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                <Label text="License Number :" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <TextField fx:id="SupervisorEmail" prefWidth="200.0" promptText="Email address of the supervisor" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="AddressStreet" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="AddressCity" maxWidth="-Infinity" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <TextField fx:id="AddressState" alignment="TOP_LEFT" maxWidth="-Infinity" minWidth="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="6" />
+                <TextField fx:id="AddressZip" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="75.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                
                 <Label text="Brokerage Firm Name :" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <Label text="Address :" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                <Label text="City:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                <Label text="State :" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                <Label text="ZIP :" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                <ChoiceBox fx:id="StatusChoiceBox" mouseTransparent="false" pickOnBounds="false" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                <Label text="License Number :" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Label text="Supervisor's Email :" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Label text="Address :" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <Label text="City:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                <Label text="State :" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                <Label text="ZIP :" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                <ChoiceBox fx:id="StatusChoiceBox" mouseTransparent="false" pickOnBounds="false" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="9">
                   <items>
                     <FXCollections fx:factory="observableArrayList" />
                   </items>
                 </ChoiceBox>
-                <Label text="Status :" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-                <HBox id="HBox" alignment="CENTER_RIGHT" spacing="5.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
+                <Label text="Status :" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+                <HBox id="HBox" alignment="CENTER_RIGHT" spacing="5.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="11">
                   <children>
                     <Button fx:id="btnSave" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleSaveButtonAction" prefWidth="80.0" text="Save" />
                     <Button fx:id="btnAdd" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleAddButtonAction" prefWidth="80.0" text="Add" />
                     <Button fx:id="btnClear" cancelButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleClearButtonAction" prefWidth="80.0" text="Clear" />
                   </children>
-                </HBox>
+                </HBox>                
+                
               </children>
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="150.0" prefWidth="154.0" />
@@ -68,6 +72,7 @@
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
