Initial version code changes for authentication.

--- a/StockTradingClient/UserPasswordRecover.fxml
+++ b/StockTradingClient/UserPasswordRecover.fxml
@@ -7,32 +7,32 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="223.0" prefWidth="450.0000999999975" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="StockTradingClient.UserActivationController">
+<AnchorPane id="AnchorPane" prefHeight="223.0" prefWidth="450.0000999999975" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="StockTradingClient.UserPasswordRecover">
   <children>
-    <VBox id="VBox" alignment="CENTER" layoutX="14.0" layoutY="5.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-1.0" prefHeight="180.0" prefWidth="433.0" spacing="5.0">
+    <VBox id="VBox" alignment="CENTER" layoutX="82.0" layoutY="5.0" prefHeight="180.0" spacing="5.0">
       <children>
         <Text fontSmoothingType="GRAY" stroke="RED" strokeLineCap="ROUND" strokeType="INSIDE" strokeWidth="0.4" text="Stock Trading System" textAlignment="CENTER">
           <font>
             <Font name="Candara Bold" size="24.0" />
           </font>
         </Text>
-        <Label text="User Account Activation">
+        <Label text="User Password Recovery">
           <font>
             <Font name="System Bold" size="12.0" />
           </font>
         </Label>
-        <Label alignment="CENTER_LEFT" contentDisplay="LEFT" maxHeight="-1.0" maxWidth="1.7976931348623157E308" prefWidth="-1.0" text="Your account has been locked. You can unlock with following details " />
-        <GridPane maxWidth="-Infinity" prefHeight="103.0" prefWidth="350.0">
+        <Label alignment="CENTER_LEFT" contentDisplay="LEFT" maxHeight="-1.0" maxWidth="1.7976931348623157E308" prefWidth="-1.0" text=" " />
+        <GridPane prefWidth="310.0">
           <children>
             <TextField fx:id="UserEmail" prefWidth="200.0" promptText="Your user account id" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <PasswordField fx:id="Password" prefWidth="200.0" promptText="Your current password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="ActivationCode" prefWidth="200.0" promptText="Activation code received by email" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <PasswordField fx:id="Password" prefWidth="200.0" promptText="Temp password received by email" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="ActivationCode" prefWidth="200.0" promptText="Password Activation Code" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Email :" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <Label text="Password :" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Label text="Temp. Password :" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <Label text="Activation Code :" GridPane.columnIndex="0" GridPane.rowIndex="2" />
             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
               <children>
-                <Button cancelButton="false" defaultButton="true" mnemonicParsing="false" onAction="#ActivateAccount" prefWidth="150.0" text="Activate Account" />
+                <Button cancelButton="false" defaultButton="true" mnemonicParsing="false" onAction="#PasswordRecoveryHandle" prefWidth="150.0" text="Reset Password" />
               </children>
             </HBox>
           </children>
