--- a/StockTradingClient/Login.fxml
+++ b/StockTradingClient/Login.fxml
@@ -18,15 +18,10 @@
         </Text>
         <GridPane prefWidth="310.0">
           <children>
-            <TextField  fx:id="UserEmail" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <PasswordField  fx:id="Password" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="UserEmail" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <PasswordField fx:id="Password" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label text="Email :" GridPane.columnIndex="0" GridPane.rowIndex="0" />
             <Label text="Password :" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-              <children>
-                <Button cancelButton="false" defaultButton="true" mnemonicParsing="false" onAction="#Login" prefWidth="149.0" text="Login" />
-              </children>
-            </HBox>
           </children>
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="101.0" minWidth="10.0" prefWidth="74.0" />
@@ -35,12 +30,22 @@
           <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           </rowConstraints>
         </GridPane>
+        <HBox alignment="CENTER" prefHeight="22.0" prefWidth="310.0" spacing="10.0">
+          <children>
+            <Button mnemonicParsing="false" onAction="#ResetPasswordHandler" prefWidth="120.0" text="Forgot Password" textFill="#292929" />
+            <Button cancelButton="false" defaultButton="true" mnemonicParsing="false" onAction="#Login" prefWidth="150.0" text="Login" />
+          </children>
+        </HBox>
       </children>
     </VBox>
-    <Label fx:id="Message" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="156.0" mouseTransparent="true" prefHeight="30.0" prefWidth="352.0" text="" textAlignment="CENTER" textFill="RED" underline="false" wrapText="true" />
-    <Button layoutX="14.0" layoutY="195.0" mnemonicParsing="false" onAction="#ResetPassword" text="Request for Password reset" textFill="#292929" />
+    <Label fx:id="Message" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="156.0" maxWidth="1.7976931348623157E308" mouseTransparent="true" prefHeight="39.00091552734375" prefWidth="432.0" text="" textAlignment="CENTER" textFill="RED" underline="false" wrapText="true" />
+    <HBox id="HBox" alignment="CENTER" layoutX="14.0" maxWidth="1.7976931348623157E308" prefWidth="428.0" spacing="50.0" AnchorPane.bottomAnchor="4.96">
+      <children>
+        <Button fx:id="ActivateAccount" mnemonicParsing="false" onAction="#ActivateAccountHandler" prefWidth="120.0" text="Activate Account" />
+        <Button fx:id="RecoverPassword" mnemonicParsing="false" onAction="#RecoverPasswordHandler" text="Recover Password" />
+      </children>
+    </HBox>
   </children>
 </AnchorPane>
