--- a/StockTradingClient/Broker.fxml
+++ b/StockTradingClient/Broker.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.collections.*?>
@@ -50,19 +49,19 @@
                   </font>
                 </Label>
                 <Label text="Email :" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                <HBox id="HBox" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" prefWidth="-1.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="10">
+                <HBox id="HBox" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" prefWidth="-1.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="11">
                   <children>
                     <Button fx:id="btnSave" alignment="CENTER" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleSaveButtonAction" prefWidth="80.0" rotate="0.0" text="Save" />
                     <Button fx:id="btnAdd" alignment="CENTER" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleAddButtonAction" prefWidth="80.0" rotate="0.0" text="Add" />
                     <Button fx:id="btnClear" cancelButton="true" contentDisplay="LEFT" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleClearButtonAction" prefWidth="80.0" text="Clear" />
                   </children>
                 </HBox>
-                <ChoiceBox fx:id="StatusChoiceBox" mouseTransparent="false" pickOnBounds="false" prefWidth="146.49990844726562" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                <ChoiceBox fx:id="StatusChoiceBox" mouseTransparent="false" pickOnBounds="false" prefWidth="146.49990844726562" GridPane.columnIndex="1" GridPane.rowIndex="9">
                   <items>
                     <FXCollections fx:factory="observableArrayList" />
                   </items>
                 </ChoiceBox>
-                <Label text="Status :" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+                <Label text="Status :" GridPane.columnIndex="0" GridPane.rowIndex="9" />
                 <TextField fx:id="Email" prefWidth="200.0" promptText="Email address of the broker. This will be the user name of the Broker." GridPane.columnIndex="1" GridPane.rowIndex="5" />
                 <Label fx:id="Password" text="Password :" GridPane.columnIndex="0" GridPane.rowIndex="6" />
                 <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
@@ -78,7 +77,7 @@
                     <TextField fx:id="BrokerLastName" prefWidth="247.0" promptText="Last Name" />
                   </children>
                 </HBox>
-                <Label fx:id="PasswordClassification" maxWidth="1.7976931348623157E308" prefWidth="153.0" text="" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                <Label fx:id="PasswordClassification" maxWidth="1.7976931348623157E308" prefWidth="153.0" text="" GridPane.columnIndex="1" GridPane.rowIndex="10" />
                 <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                   <children>
                     <Label fx:id="PasswordGradeVeryWeek" alignment="CENTER" contentDisplay="CENTER" disable="false" maxWidth="-Infinity" prefWidth="72.0" style="-fx-background-color: #FF0000;&#10;-fx-border-color:#000000;&#10;" text="Poor" textAlignment="LEFT" />
@@ -88,12 +87,18 @@
                     <Button mnemonicParsing="false" onAction="#handlePasswordClassification" prefWidth="105.0" text="Check Strength" />
                   </children>
                 </HBox>
+                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                  <children>
+                    <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleResetPassword" prefWidth="105.0" text="Reset Password" textAlignment="CENTER" />
+                  </children>
+                </HBox>
               </children>
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="199.0" minWidth="169.0" prefWidth="178.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="444.0" minWidth="10.0" prefWidth="435.0" />
               </columnConstraints>
               <rowConstraints>
+                <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
