--- a/StockTradingClient/Login.fxml
+++ b/StockTradingClient/Login.fxml
@@ -13,7 +13,7 @@
       <children>
         <Text fontSmoothingType="GRAY" stroke="RED" strokeLineCap="ROUND" strokeType="INSIDE" strokeWidth="0.4" text="Stock Trading System" textAlignment="CENTER">
           <font>
-            <Font name="Candara Bold" size="24.0" />
+            <Font size="24.0" />
           </font>
         </Text>
         <GridPane prefWidth="310.0">
@@ -34,7 +34,7 @@
         </GridPane>
         <HBox alignment="CENTER" prefHeight="22.0" prefWidth="310.0" spacing="10.0">
           <children>
-            <Button mnemonicParsing="false" onAction="#ResetPasswordHandler" prefWidth="120.0" text="Forgot Password" textFill="#292929" />
+            <Button mnemonicParsing="false" onAction="#ResetPasswordHandler" prefWidth="150.0" text="Forgot Password" textFill="#292929" />
             <Button cancelButton="false" defaultButton="true" mnemonicParsing="false" onAction="#Login" prefWidth="150.0" text="Login" />
           </children>
         </HBox>
@@ -43,8 +43,8 @@
     <Label fx:id="Message" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="156.0" maxWidth="1.7976931348623157E308" mouseTransparent="true" prefHeight="39.00091552734375" prefWidth="432.0" text="" textAlignment="CENTER" textFill="RED" underline="false" wrapText="true" />
     <HBox id="HBox" alignment="CENTER" layoutX="14.0" maxWidth="1.7976931348623157E308" prefWidth="428.0" spacing="50.0" AnchorPane.bottomAnchor="4.96">
       <children>
-        <Button id="ActivateAccount" mnemonicParsing="false" onAction="#ActivateAccountHandler" prefWidth="120.0" text="Activate Account" />
-        <Button id="RecoverPassword" mnemonicParsing="false" onAction="#RecoverPasswordHandler" prefWidth="120.0" text="Recover Password" />
+        <Button id="ActivateAccount" mnemonicParsing="false" onAction="#ActivateAccountHandler" prefWidth="150.0" text="Activate Account" />
+        <Button id="RecoverPassword" mnemonicParsing="false" onAction="#RecoverPasswordHandler" prefWidth="150.0" text="Recover Password" />
       </children>
     </HBox>
   </children>
