--- a/StockTradingClient/UserActivation.fxml
+++ b/StockTradingClient/UserActivation.fxml
@@ -13,7 +13,7 @@
       <children>
         <Text fontSmoothingType="GRAY" stroke="RED" strokeLineCap="ROUND" strokeType="INSIDE" strokeWidth="0.4" text="Stock Trading System" textAlignment="CENTER">
           <font>
-            <Font name="Candara Bold" size="24.0" />
+            <Font size="24.0" />
           </font>
         </Text>
         <Label text="User Account Activation">
@@ -22,7 +22,7 @@
           </font>
         </Label>
         <Label alignment="CENTER_LEFT" contentDisplay="LEFT" maxHeight="-1.0" maxWidth="1.7976931348623157E308" prefWidth="-1.0" text="Your account has been locked. You can unlock with following details " />
-        <GridPane maxWidth="-Infinity" prefHeight="103.0" prefWidth="350.0">
+        <GridPane maxWidth="-Infinity" prefHeight="103.0" prefWidth="378.0">
           <children>
             <TextField fx:id="UserEmail" prefWidth="200.0" promptText="Your user account id" GridPane.columnIndex="1" GridPane.rowIndex="0" />
             <PasswordField fx:id="Password" prefWidth="200.0" promptText="Your current password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -37,8 +37,8 @@
             </HBox>
           </children>
           <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="74.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="95.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="257.0" minWidth="10.0" prefWidth="257.0" />
           </columnConstraints>
           <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
