view logs by administrator

--- a/StockTradingClient/Main.fxml
+++ b/StockTradingClient/Main.fxml
@@ -20,7 +20,8 @@
     <Label layoutX="410.0" layoutY="46.0" text="Broker" />
     <ToggleButton fx:id="HackMode" blendMode="SRC_OVER" mnemonicParsing="false" onAction="#handleButtonAction_btnHackMode" prefWidth="135.0" selected="false" text="Hack Mode Off" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
     <Button fx:id="ChangePassword" mnemonicParsing="false" onAction="#handleButtonAction_btnChangePassword" prefWidth="135.0" text="Change Password" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" />
-    <Button id="Broker" fx:id="Administrator" layoutX="14.0" layoutY="192.0" mnemonicParsing="false" onAction="#handleButtonAction_btnAddAdmin" prefWidth="130.0" text="Administrator" />
+    <Button fx:id="Administrator" layoutX="14.0" layoutY="192.0" mnemonicParsing="false" onAction="#handleButtonAction_btnAddAdmin" prefWidth="130.0" text="Administrator" />
     <Button fx:id="StockView" layoutX="482.0" layoutY="192.0" mnemonicParsing="false" onAction="#handleButtonAction_btnStockView" prefWidth="130.0" text="View Stocks" />
+    <Button fx:id="LogView" layoutX="14.0" layoutY="242.0" mnemonicParsing="false" onAction="#handleButtonAction_btnLogView" prefWidth="130.0" text="View Logs" />
   </children>
 </AnchorPane>
